// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders typing area 1`] = `
<DocumentFragment>
  .emotion-23 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-4 {
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-1 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-17 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-20 {
  --border-opacity: 1;
  height: 1rem;
  border-width: 1px;
  border-color: #3f83f8;
  border-color: rgba(63,131,248,var(--border-opacity));
  width: 1px;
}

<div
    class="emotion-23"
  >
    <p
      class="emotion-0"
      data-testid="template"
    >
      the quick brown fox jumps over the lazy dog
    </p>
    <p
      class="emotion-0"
      data-testid="user"
    >
      <span
        class="emotion-4"
      >
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          t
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          h
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          e
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-4"
      >
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          q
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          u
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          i
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          c
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          k
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-4"
      >
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          b
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          r
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          w
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          n
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-4"
      >
        <span
          class="wrong emotion-17"
          data-testid="wrong"
        >
          d
        </span>
        <span
          class="correct emotion-1"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="wrong emotion-17"
          data-testid="wrong"
        >
          g
        </span>
        <span
          class="emotion-20"
          data-testid="caret"
        />
      </span>
      <span>
         
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`typealong mode renders mid-word correctly 1`] = `
<DocumentFragment>
  .emotion-30 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-28 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-3 {
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-16 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-26 {
  --border-opacity: 1;
  height: 1rem;
  border-width: 1px;
  border-color: #3f83f8;
  border-color: rgba(63,131,248,var(--border-opacity));
  width: 1px;
}

.emotion-24 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

<div
    class="emotion-30"
  >
    <span
      class="emotion-28"
      data-testid="user"
    >
      <span
        class="emotion-3"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          t
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          h
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          e
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-3"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          q
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          u
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          i
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          c
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          k
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-3"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          b
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          r
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          w
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          n
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-3"
      >
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          d
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          g
        </span>
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          e
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-3"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          j
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          u
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          m
        </span>
        <span
          class="pending emotion-24"
          data-testid="pending"
        >
          p
        </span>
        <span
          class="pending emotion-24"
          data-testid="pending"
        >
          s
        </span>
        <span
          class="emotion-26"
          data-testid="caret"
        />
      </span>
      <span>
         
      </span>
    </span>
    <span
      class="emotion-28"
      data-testid="template"
    >
      over the lazy dog
    </span>
  </div>
</DocumentFragment>
`;

exports[`typealong mode renders template & user area combined 1`] = `
<DocumentFragment>
  .emotion-24 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-22 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-3 {
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-16 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-20 {
  --border-opacity: 1;
  height: 1rem;
  border-width: 1px;
  border-color: #3f83f8;
  border-color: rgba(63,131,248,var(--border-opacity));
  width: 1px;
}

<div
    class="emotion-24"
  >
    <span
      class="emotion-22"
      data-testid="user"
    >
      <span
        class="emotion-3"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          t
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          h
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          e
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-3"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          q
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          u
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          i
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          c
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          k
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-3"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          b
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          r
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          w
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          n
        </span>
      </span>
      <span>
         
      </span>
      <span
        class="emotion-3"
      >
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          d
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          g
        </span>
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          e
        </span>
        <span
          class="emotion-20"
          data-testid="caret"
        />
      </span>
      <span>
         
      </span>
    </span>
    <span
      class="emotion-22"
      data-testid="template"
    >
      jumps over the lazy dog
    </span>
  </div>
</DocumentFragment>
`;
